// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Engine encounters > runs encounter "Day 1 - Banannabal" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 320,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 1 - Fanged Inglet" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 319,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 1 - Haunted Kimono" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 321,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 1 - Kyver Drone" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 319,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 1 - Pyro" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 319,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 1 - Viper" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 318,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 2 - Boarrior" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 327,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 2 - Coconut Crab" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 329,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 2 - Covetous Thief" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 329,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 2 - Giant Mosquito" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 325,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 2 - Rogue Scrapper" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 332,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 3 - Dabbling Apprentice" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 328,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 3 - Eccentric Etherwright" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 250,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 3 - Frost Street Challenger" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 333,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 3 - Rogue Scrapper" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 332,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 3 - Scout Trooper" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 325,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 3 - Tempest Flamedancer" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 327,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 4 - Bloodreef Raider" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 338,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 4 - Boilerroom Brawler" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 340,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 4 - Deadly Crooner" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 313,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 4 - Flame Juggler" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 316,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 4 - Hydrodude" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 337,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 4 - Outlands Dervish" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 323,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 4 - Retiree" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 328,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 4 - Techno Virus" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 322,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 5 - Gorgon Noble" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 221,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 5 - Hakurvian Rocket Trooper" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 335,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 5 - Infernal Envoy" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 196,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 5 - Mod Squad" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 193,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 5 - Preening Duelist" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 120,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 5 - Sabretooth" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 320,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 5 - Trashtown Mayor" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 333,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 6 - Dire Inglet" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 326,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 6 - Dire Mosquito" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 339,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 6 - Enclave Weeper" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 318,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 6 - Foreman" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 268,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 6 - Infernal" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 106,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 6 - Lich" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 161,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 6 - Loan Shark" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 200,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 6 - Trash Golem" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 328,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 6 - Zookeeper" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 301,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 7 - Chilly Charles" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 341,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 7 - Cosmic Roc" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 332,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 7 - Joyful Jack" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 324,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 7 - Radiant Corsair" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 186,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 7 - Sergeant Suds" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 246,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 7 - Shock Trooper" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 86,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 7 - Thug" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 161,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 7 - Treasure Turtle" against empty board 1`] = `
[
  {
    "error": "Unhandled action type: TActionCardForceUse",
    "step": 1,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 7 - Viper Tyrant" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 211,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 8 - Bouncertron" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 120,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 8 - Burninator Bot" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 250,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 8 - Car Conductor" against empty board 1`] = `
[
  {
    "error": "Unhandled action type: TActionCardForceUse",
    "step": 1,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 8 - Cosmic Roc" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 332,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 8 - Dr. Vortex" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 290,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 8 - Infernal Frigate" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 111,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 8 - Joyful Jack" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 324,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 8 - Oasis Guardian" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 231,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 8 - Wandering Shoal" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 201,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 9 - Bloodreef Captain" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 323,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 9 - Death Knight Reaper" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 200,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 9 - Elite Duelist" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 130,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 9 - Enclave Revenant" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 180,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 9 - Ferros Khan" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 77,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 9 - Oasis Guardian" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 231,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 9 - Roaming Isle" against empty board 1`] = `
[
  {
    "error": "Unhandled action type: TActionCardForceUse",
    "step": 1,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 9 - Weapons Platform" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 105,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 10 - Awakened District" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 100,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 10 - Boss Harrow" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 123,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 10 - Frost Street Champion" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 335,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 10 - Hulking Experiment" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 146,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 10 - Lord Arken" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 68,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 10 - Lord of the Wastes" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 250,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 10 - Master Alchemist" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 301,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 10 - Property Baron" against empty board 1`] = `
[
  {
    "error": "Unhandled action type: TActionCardForceUse",
    "step": 1,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 10 - Trash Titan" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 121,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 10 - Veteran Octopus" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 150,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 10 - Void Colossus" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 176,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 10 - Void Golem" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 320,
  },
]
`;

exports[`Engine encounters > runs encounter "Day 10 - Volkas Enforcer" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 146,
  },
]
`;

exports[`Engine encounters > runs encounter "Day event - Bounty Hunter" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 200,
  },
]
`;

exports[`Engine encounters > runs encounter "Day event - Mimic" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 80,
  },
]
`;

exports[`Engine encounters > runs encounter "Day event - Mr. Moo" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 140,
  },
]
`;

exports[`Engine encounters > runs encounter "Day event - Sparring Partner" against empty board 1`] = `
[
  {
    "isPlaying": false,
    "step": 341,
  },
]
`;
